<resources>
    <string name="app_name">Meeting Tracker</string>
    <string name="loginBtn">Login</string>
    <string name="addMeetingBtn">Add Meeting</string>
    <string name="submitBtn">Add New</string>
    <string name="emailHint">E-mail</string>
    <string name="passwordHint">Password</string>
    <string name="priority">Priority Meeting</string>
    <string name="name">Participant</string>
    <string-array name="Month">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string name="monthPrompt">Month</string>
    <string-array name="Day">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string name="dayPrompt">Day</string>
    <string-array name="year">
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
    </string-array>
    <string name="yearPrompt">Year</string>
    <string-array name="timeHr">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string name="hrPrompt">Hour</string>
    <string-array name="TimeMin">
        <item>00</item>
        <item>15</item>
        <item>30</item>
        <item>45</item>
    </string-array>
    <string name="minPrompt">Min</string>
    <string-array name="timeFactor">
        <item>am</item>
        <item>pm</item>
    </string-array>
    <string name="placeHint">Where is your meeting?</string>
    <string name="AddInfo">Additional Information</string>
    <string name="meetings">Scheduled Meetings</string>
    <string name="phoneHint">(###)###-####</string>
    <string name="mainTitle">Meeting Tracker</string>
</resources>